--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="ico/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>今日热榜 - 汇聚全网热点，热门尽览无余</title>
+    <title>书友会热榜 - 汇聚全网热点，热门尽览无余</title>
   </head>
   <body>
     <div id="app"></div>
